bug squashed, MVP complete

--- a/css/index.css
+++ b/css/index.css
@@ -310,8 +310,24 @@ footer {
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
-    width: 100%;
+    background-color: #22283A;
+    color: white;
+    font-size: 1.8rem;
     padding: 25px;
+    border-radius: 5px;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
+  }
+  .home .walk .walk-text .btn:hover {
+    background-color: white;
+    color: #22283A;
+    font-size: 1.8rem;
+    padding: 25px;
+    border-radius: 5px;
+    width: 100%;
+    text-align: center;
+    cursor: pointer;
   }
 }
 @media (max-width: 500px) {
